# second-brain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: schema.yaml
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: main.rs
crates/brain-cli/src/commands/: add.rs  entity.rs  ingest.rs  logs.rs  mod.rs  process.rs  search.rs  stats.rs  timeline.rs  today.rs
crates/brain-core/: Cargo.toml
crates/brain-core/src/: config.rs  dicts.rs  error.rs  lib.rs
crates/brain-core/src/adapters/: dict_context.rs  http_client.rs  minimax_adapter.rs  mod.rs  model_adapter.rs  ollama_adapter.rs  openai_adapter.rs  prompts.rs  response.rs  router.rs
crates/brain-core/src/db/: connection.rs  entity_repo.rs  event_repo.rs  migrations.rs  mod.rs  tag_repo.rs
crates/brain-core/src/logging/: log.rs  logger.rs  mod.rs  repo.rs
crates/brain-core/src/markdown/: mod.rs  parser.rs  serializer.rs
crates/brain-core/src/models/: entity.rs  event.rs  mod.rs  raw_data.rs  tag.rs  task.rs
crates/brain-indexerd/: Cargo.toml
crates/brain-indexerd/src/: main.rs  processor.rs
crates/brain-pipeline/: Cargo.toml
crates/brain-pipeline/src/: builder.rs  lib.rs  main.rs  processor.rs  queue.rs  router.rs
doc/: V1 Architecture.md  V1_IMPLEMENTATION.md  V2：自动数据采集架构（Automatic Capture Architecture）.md  V4：Self-Evolution Architecture（自进化系统）.md  V5：Proactive Cognition Layer（主动认知层）.md
doc/Implementation/: 01-System-Overview.md  02-brain-core.md  03-brain-cli.md  04-brain-indexerd.md  05-brain-pipeline.md  06-Data-Flow.md  07-Key-Patterns.md  README.md
doc/Implementation/modules/: brain-cli.md  brain-core.md  brain-indexerd.md  brain-pipeline.md
doc/SolutionDesign/: V3：Memory Graph 与 Cognitive Engine 设计.md  V6：Unified Interface & Knowledge OS（统一交互与知识操作系统）.md  V7：从 0 到可运行 Knowledge OS 的工程化设计.md
scripts/: brain-indexerd.service  ci-check.sh
