[workspace]
resolver = "2"
members = [
    "crates/brain-core",
    "crates/brain-indexerd",
    "crates/brain-cli",
    "crates/brain-pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Second Brain Team"]
license = "MIT"

[workspace.dependencies]
# Core
brain-core = { path = "crates/brain-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File watching
notify = "6.1"

# Markdown
gray_matter = "0.2"
pulldown-cmark = "0.10"

# HTTP client (for adapters)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
directories = "5.0"
