[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain-core.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
