[package]
name = "brain-core"
version.workspace = true
edition.workspace = true

[dependencies]
gray_matter.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
directories.workspace = true
once_cell.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
uuid.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
tempfile.workspace = true
