[package]
name = "brain-pipeline"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain-pipeline"
path = "src/main.rs"

[dependencies]
brain-core.workspace = true
clap.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
uuid.workspace = true
